Added validation in SportsServices, added IntegrationTests and refactored code.
