# src/main/kotlin/pt/isel/ls/sports/api/routers/routes/RoutesResponse.kt
@@ -1,0 +1,7 @@
+package pt.isel.ls.sports.api.routers.routes
+
+import kotlinx.serialization.Serializable
+import pt.isel.ls.sports.domain.Route
+
+@Serializable
+data class RoutesResponse(val routes: List<Route>)
