# src/main/kotlin/pt/isel/ls/sports/api/routers/routes/RoutesRouter.kt
@@ -10,11 +10,11 @@ import org.http4k.core.Status.Companion.CREATED
 import org.http4k.core.Status.Companion.OK
 import org.http4k.routing.bind
 import org.http4k.routing.routes
-import pt.isel.ls.sports.SportsServices
 import pt.isel.ls.sports.api.routers.utils.json
 import pt.isel.ls.sports.api.routers.utils.pathOrThrow
 import pt.isel.ls.sports.api.routers.utils.tokenOrThrow
 import pt.isel.ls.sports.errors.getErrorResponse
+import pt.isel.ls.sports.services.SportsServices
 import pt.isel.ls.sports.toIntOrThrow
 
 /**
@@ -68,7 +68,7 @@ class RoutesRouter(private val services: SportsServices) {
     private fun getRoutes(request: Request): Response = runCatching {
         val routes = services.getAllRoutes()
 
-        return Response(OK).json(routes)
+        return Response(OK).json(RoutesResponse(routes))
     }.getOrElse(::getErrorResponse)
 
     /**
