# src/main/kotlin/pt/isel/ls/sports/domain/Route.kt
@@ -1,6 +1,12 @@
+@file:Suppress(
+    "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted",
+    "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted"
+)
+
 package pt.isel.ls.sports.domain
 
 import kotlinx.serialization.Serializable
+import pt.isel.ls.sports.services.isValidId
 
 /**
  * Route  representation.
@@ -11,15 +17,26 @@ import kotlinx.serialization.Serializable
  * @property distance distance between [start_location] and [end_location] in meters
  * @property uid unique identifier of the user who created the route
  */
+@Suppress(
+    "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted",
+    "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted", "BooleanMethodIsAlwaysInverted"
+)
 @Serializable
 data class Route(
     val id: Int,
     val start_location: String,
     val end_location: String,
-    val distance: Int,
+    val distance: Double,
     val uid: Int
 ) {
+    companion object {
+        fun isValidDistance(distance: Double) =
+            distance >= 0
+    }
+
     init {
-        require(distance > 0) { "Distance in route must be positive" }
+        require(isValidId(id)) { "Invalid route id: $id" }
+        require(isValidDistance(distance)) { "Invalid distance: $distance" }
+        require(isValidId(uid)) { "Invalid sport id: $uid" }
     }
 }
